-drobne poprawki w klasach grafowych -przerobiono graf_lista (teraz przechowuje incydencje jako tablice shared_ptr) -zaimplementowano alg. Prima (przy grafie listowym zachowuje się dziwnie)

--- a/todo
+++ b/todo
@@ -1,3 +1,2 @@
-chyba w macierzy sąsiedztwa lista k incydentnych zjebana
-generacja losowych grafów
-algorytmy
+dokończyć algorytm prima
+przerobić kruskala na cywilizowany template
